// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TYIpcTimerInterval components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "width": 120,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.6)",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "paddingRight": 10,
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F42E1B",
            "borderRadius": 3,
            "height": 6,
            "marginLeft": 10,
            "marginRight": 5,
            "overflow": "hidden",
            "width": 6,
          },
          Object {},
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      size={null}
      style={
        Array [
          Object {
            "color": "rgb(255,255,255)",
            "fontSize": 14,
          },
          Object {},
        ]
      }
      type={null}
      weight={null}
    >
      00:00
    </TYText>
  </View>
</View>
`;

exports[`TYIpcTimerInterval components start value hour less than 10 and more than the 0 1`] = `
<View
  style={
    Array [
      Object {
        "width": 120,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.6)",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "paddingRight": 10,
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F42E1B",
            "borderRadius": 3,
            "height": 6,
            "marginLeft": 10,
            "marginRight": 5,
            "overflow": "hidden",
            "width": 6,
          },
          Object {},
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      size={null}
      style={
        Array [
          Object {
            "color": "rgb(255,255,255)",
            "fontSize": 14,
          },
          Object {},
        ]
      }
      type={null}
      weight={null}
    >
      02:00:00
    </TYText>
  </View>
</View>
`;

exports[`TYIpcTimerInterval components start value hour more than 10 1`] = `
<View
  style={
    Array [
      Object {
        "width": 120,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.6)",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "paddingRight": 10,
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#F42E1B",
            "borderRadius": 3,
            "height": 6,
            "marginLeft": 10,
            "marginRight": 5,
            "overflow": "hidden",
            "width": 6,
          },
          Object {},
        ]
      }
    />
    <TYText
      align={null}
      color={null}
      size={null}
      style={
        Array [
          Object {
            "color": "rgb(255,255,255)",
            "fontSize": 14,
          },
          Object {},
        ]
      }
      type={null}
      weight={null}
    >
      20:00:00
    </TYText>
  </View>
</View>
`;
